# libfetch

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  vcpkg.json
.github/workflows/: build-no-tls.yml  build-tls.yml  docs.yml  reusable-build.yml  wine.yml
cmake/: GetGitVersion.cmake  libfetch-config.cmake.in  version.h.in
doc/: Doxyfile.in
scripts/: test-server.ps1  test-server.sh
src/: cookie.c  cookie.h  dns.c  dns.h  fetch.c  fetch.h  main.c  picohttpparser.c  picohttpparser.h  root.c  root.h  sets.h  stream.c  stream.h
src/win32/: str_win32.h  strptime.c  strptime.h
tests/: test_cookies.c  test_libfetch.c  test_stream.c  unity.h  unity_internals.h
